--- a/public/index.html
+++ b/public/index.html
@@ -148,6 +148,12 @@
                     <p>排班與員工管理</p>
                 </div>
                 
+                <div class="feature-card admin-card" onclick="location.href='/pages/announcement.html'" style="background: linear-gradient(135deg, #FFF3E0, #FFE0B2);">
+                    <div class="icon">📢</div>
+                    <h3>店長公告</h3>
+                    <p>發布訊息給員工</p>
+                </div>
+                
                 <div class="feature-card admin-card" onclick="location.href='/reports'">
                     <div class="icon">📊</div>
                     <h3>管理員報表</h3>
